[package]
resolver = "2"
name = "{{project-name}}"
version = "0.1.2"
description = "Keyboard firmware written in Rust"
homepage = ""
repository = ""
readme = ""
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
rmk = { version = "0.1.3"}
cortex-m-rt = "0.7.3"
{% if microcontroller_family == "stm32" %}
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
embassy-stm32 = { version = "0.1.0", features = [
    "{{ chip }}",
    "defmt",
    "time-driver-any",
    "time",
] }
embassy-time = { version = "0.3", features = ["tick-hz-32_768", "defmt"] }
{% endif %}
{% if microcontroller_family == "nrf" %}
embassy-nrf = { version = "0.1.0", features = [
    "{{ chip }}",
    "defmt",
    "time-driver-rtc1",
    "gpiote",
    "time",
] }
embassy-time = { version = "0.3", features = ["tick-hz-32_768", "defmt"] }
{% endif %}
{% if microcontroller_family == "rp" %}
embassy-rp = { version = "0.1", features = [
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-time = { version = "0.3", features = ["defmt"] }
portable-atomic = { version = "1.5", features = ["critical-section"] }
{% endif %}
embassy-executor = { version = "0.5.0", features = [
    "defmt",
    "arch-cortex-m",
    "executor-thread",
    "integrated-timers",
] }
packed_struct = { version = "0.10.1", default-features = false }
embedded-storage = { version = "0.3" }
static_cell = { version = "2" }
defmt = "0.3.5"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3", features = ["print-defmt"] }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[profile.dev]
codegen-units = 1      # better optimizations
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1       # better optimizations
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"