[package]
name = "{{ project_name }}"
version = "0.2.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# rmkit rewrites this line: version/source from chip_matrix.toml [rmk], features from
# firmware_features(). The default below is kept in sync with [rmk].
rmk = { git = "https://github.com/HaoboGu/rmk", rev = "836e6880e9617b00a80682d48168c57eebb8ff98", default-features = false, features = ["defmt", "storage", "vial", "watchdog", "async_matrix", "nrf52840_ble", "adafruit_bl"] }
nrf-sdc = { git = "https://github.com/alexmoon/nrf-sdc", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55", features = [
    "defmt",
    "peripheral",
    "central",
    "{{ chip_name }}",
] }
nrf-mpsl = { git = "https://github.com/alexmoon/nrf-sdc", rev = "abe49d22ebfc85fae134eb082fbfddf752016a55", features = [
    "defmt",
    "critical-section-impl",
    "{{ chip_name }}",
] }
bt-hci = { version = "0.9", features = ["defmt"] }

cortex-m = "0.7.7"
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt"] }
embassy-nrf = { version = "0.11", features = [
    "defmt",
    "{{ chip_name }}",
    "time-driver-rtc1",
    "gpiote",
    "unstable-pac",
    "nfc-pins-as-gpio",
    "time",
] }
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }
static_cell = "2"

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "{{ project_name }}"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
