[package]
name = "{{ project_name }}"
version = "0.1.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# rmkit rewrites this line: version/source from chip_matrix.toml [rmk], features from
# firmware_features(). The default below is kept in sync with [rmk] so the rendered
# project resolves standalone.
rmk = { git = "https://github.com/HaoboGu/rmk", rev = "836e6880e9617b00a80682d48168c57eebb8ff98", default-features = false, features = ["defmt", "storage", "vial", "watchdog", "rp2040"] }
embassy-time = { version = "0.5", features = ["defmt"] }
embassy-rp = { version = "0.10", features = [
    "rp2040",
    "defmt",
    "time-driver",
    "critical-section-impl",
] }
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
cortex-m-rt = "0.7.5"
portable-atomic = { version = "1", features = ["critical-section"] }
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "{{ project_name }}"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
