[package]
name = "{{ project_name }}"
version = "0.1.0"
authors = ["Haobo Gu <haobogu@outlook.com>"]
description = "Keyboard firmware written in Rust"
homepage = "https://github.com/haobogu/rmk"
repository = "https://github.com/haobogu/rmk"
readme = "README.md"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
# rmkit rewrites this line: version/source from chip_matrix.toml [rmk], features from
# firmware_features(). STM32 has no rmk chip feature — the HAL is embassy-stm32,
# selected by `{{ chip_name }}` below.
rmk = { git = "https://github.com/HaoboGu/rmk", rev = "bf4d5b3fd363ff799351f87168009c7075e1ea44", default-features = false, features = ["defmt", "storage", "vial", "watchdog"] }
cortex-m = { version = "0.7.7", features = ['critical-section-single-core'] }
cortex-m-rt = "0.7.5"
embassy-time = { version = "0.5", features = ["tick-hz-32_768", "defmt"] }
embassy-stm32 = { version = "0.6", features = [
    "{{ chip_name }}",
    "defmt",
    "memory-x",
    "time-driver-any",
] }
embassy-executor = { version = "0.10", features = [
    "defmt",
    "platform-cortex-m",
    "executor-thread",
] }
static_cell = "2"
defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

[build-dependencies]
xz2 = "0.1.7"
json = "0.12"
const-gen = "1.6"

[[bin]]
name = "{{ project_name }}"
test = false
bench = false

[profile.dev]
codegen-units = 1
debug = true
opt-level = 1
overflow-checks = true
lto = false
panic = 'unwind'

[profile.release]
codegen-units = 1
debug = true            # no overhead for bare-metal
opt-level = "z"         # optimize for binary size
overflow-checks = false
lto = "fat"
